# licenselens

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/licenselens/: __init__.py  analyzer.py  classifier.py  cli.py  models.py  reporter.py  resolver.py
src/licenselens/parser/: __init__.py  base.py  go.py  node.py  python.py  rust.py
tests/: conftest.py  test_analyzer.py  test_classifier.py  test_cli.py  test_models.py  test_reporter.py
tests/test_parser/: test_go.py  test_node.py  test_python.py  test_rust.py
