[project]
name = "licenselens"
version = "0.1.0"
description = "Multi-ecosystem dependency license auditor with conflict detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Edgar Ortega", email = "edgar@example.com"},
]
keywords = ["license", "audit", "compliance", "dependencies", "open-source"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.15.0",
]

[project.scripts]
licenselens = "licenselens.cli:main"

[project.urls]
Homepage = "https://github.com/EdgarOrtegaRamirez/licenselens"
Repository = "https://github.com/EdgarOrtegaRamirez/licenselens"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 150
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
